--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ body{
     align-items: center;
     gap:100px;
     padding:20px;
-    padding-bottom: 0px;
+    /* Keeps my header at the top while scrolling */
+    position: sticky;
+    top: 0;
+    z-index: 999;
     
 }
 /* .logo{
@@ -29,7 +32,6 @@ body{
     width: 75px;
     padding-top: 5px;
     padding-left: 40px;
-    padding-bottom: 100px;
 }
 ul{
     font-size: 18px;
@@ -37,7 +39,6 @@ ul{
     display: flex;
     list-style-type: none;
     padding-top: 5px;
-    padding-bottom: 100px;
     padding-right: 40px;
 }
 a{
